--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@prisma/client": "^5.19.1",
+    "backend-granjas": "file:",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mssql": "^10.0.4",
-    "backend-granjas": "file:",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
@@ -48,7 +49,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.19.1",
+    "prisma": "^5.20.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
